@@ -49,4 +49,9 @@ class tx_caglinkchecker_checkinternallinks {
 	}
 }
 
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/cag_linkchecker/lib/class.tx_caglinkchecker_checkinternallinks.php'])  {
+        include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/cag_linkchecker/lib/class.tx_caglinkchecker_checkinternallinks.php']);
+}
+
 ?>
